--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .reveal-section { opacity: 0; transform: translateY(30px); transition: opacity 1.2s ease-out, transform 1.2s ease-out; }
         .reveal-section.active { opacity: 1; transform: translateY(0); }
 
-        /* --- 3. 보유 기술 (아이콘 스타일링) --- */
+        /* --- 3. 보유 기술 (아이콘 컬러 통일) --- */
         .section-title { max-width: 1100px; margin: 70px auto 30px; padding: 0 20px; font-size: 1.5rem; color: var(--accent); letter-spacing: 2px; text-align: left; display: flex; align-items: center; }
         .section-title::before { content: "►"; margin-right: 15px; color: #fff; }
         .skills-wrapper { max-width: 1100px; margin: 0 auto 60px; padding: 0 20px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
@@ -83,24 +83,12 @@
         .skill-item { display: flex; flex-direction: column; margin-bottom: 12px; }
         .skill-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; width: 100%; }
         
-        /* [수정] 스킬 이름 및 아이콘 컨테이너 */
-        .skill-name-box { display: flex; align-items: center; gap: 10px; }
-        .skill-name-box i { font-size: 1.1rem; width: 20px; text-align: center; } /* 아이콘 너비 고정으로 줄 맞춤 */
+        .skill-name-box { display: flex; align-items: center; gap: 12px; }
+        /* [수정] 모든 아이콘 색상을 사이트 포인트 컬러로 통일 */
+        .skill-name-box i { font-size: 1.1rem; width: 22px; text-align: center; color: var(--accent); filter: drop-shadow(0 0 5px var(--accent-glow)); } 
         .skill-name { font-size: 0.9rem; color: #fff; font-weight: bold; }
         .skill-lv { font-family: 'Press Start 2P'; font-size: 0.7rem; color: var(--lv5-color); }
         
-        /* 아이콘 색상 설정 */
-        .ic-jira { color: #0052CC; }
-        .ic-slack { color: #4A154B; }
-        .ic-confluence { color: #0052CC; }
-        .ic-notion { color: #ffffff; }
-        .ic-excel { color: #217346; }
-        .ic-figma { color: #F24E1E; }
-        .ic-ppt { color: #D24726; }
-        .ic-word { color: #2B579A; }
-        .ic-engine { color: #97c1e7; }
-        .ic-ai { color: #00f2ff; }
-
         .exp-bar-bg { width: 100%; height: 10px; background: #000; border: 1px solid var(--border); position: relative; overflow: hidden; }
         .exp-fill { height: 100%; background: var(--accent); position: absolute; left: 0; top: 0; box-shadow: 0 0 10px var(--accent-glow); transition: 1.5s cubic-bezier(0.1, 0, 0.1, 1); }
 
@@ -150,7 +138,7 @@
 
     <div id="intro-overlay">
         <h1>GAME DESIGNER<br>LEE JAE YOUNG<br><span>PORTFOLIO<span class="cursor-blink">_</span></span></h1>
-        <button class="btn-pixel btn-blink" onclick="startLoadingSequence(event)">START ADVENTURE</button>
+        <button class="btn-pixel btn-pixel blink" onclick="startLoadingSequence(event)">START ADVENTURE</button>
     </div>
 
     <div id="loading-screen">
@@ -191,19 +179,19 @@
             <div class="skill-group">
                 <div class="skill-group-title">협업 & 관리</div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-jira ic-jira"></i><span class="skill-name">Jira</span></div><span class="skill-lv">LV.5</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-jira"></i><span class="skill-name">Jira</span></div><span class="skill-lv">LV.5</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 100%; background: var(--lv5-color);"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-slack ic-slack"></i><span class="skill-name">Slack</span></div><span class="skill-lv">LV.5</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-slack"></i><span class="skill-name">Slack</span></div><span class="skill-lv">LV.5</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 100%; background: var(--lv5-color);"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-confluence ic-confluence"></i><span class="skill-name">Confluence</span></div><span class="skill-lv">LV.5</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-confluence"></i><span class="skill-name">Confluence</span></div><span class="skill-lv">LV.5</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 100%; background: var(--lv5-color);"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-note-sticky ic-notion"></i><span class="skill-name">Notion</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-book"></i><span class="skill-name">Notion</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 80%;"></div></div>
                 </div>
             </div>
@@ -211,19 +199,19 @@
             <div class="skill-group">
                 <div class="skill-group-title">기획 & 분석</div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-excel ic-excel"></i><span class="skill-name">Excel</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-excel"></i><span class="skill-name">Excel</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 85%;"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-figma ic-figma"></i><span class="skill-name">Figma</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-powerpoint"></i><span class="skill-name">PPT</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="exp-bar-bg"><div class="exp-fill" style="width: 85%;"></div></div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-word"></i><span class="skill-name">Word</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 80%;"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-powerpoint ic-ppt"></i><span class="skill-name">PPT</span></div><span class="skill-lv">LV.4</span></div>
-                    <div class="exp-bar-bg"><div class="exp-fill" style="width: 85%;"></div></div>
-                </div>
-                <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-file-word ic-word"></i><span class="skill-name">Word</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-figma"></i><span class="skill-name">Figma</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 80%;"></div></div>
                 </div>
             </div>
@@ -231,19 +219,19 @@
             <div class="skill-group">
                 <div class="skill-group-title">개발 & 엔진</div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-gamepad ic-engine"></i><span class="skill-name">Gamemaker</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-cube"></i><span class="skill-name">Gamemaker</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 85%;"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-unity ic-engine"></i><span class="skill-name">Unity</span></div><span class="skill-lv">LV.3</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fab fa-unity"></i><span class="skill-name">Unity</span></div><span class="skill-lv">LV.3</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 65%;"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-robot ic-ai"></i><span class="skill-name">Gemini</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-wand-magic-sparkles"></i><span class="skill-name">Gemini</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 80%;"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-brain ic-ai"></i><span class="skill-name">NotebookLM</span></div><span class="skill-lv">LV.4</span></div>
+                    <div class="skill-header"><div class="skill-name-box"><i class="fas fa-microchip"></i><span class="skill-name">NotebookLM</span></div><span class="skill-lv">LV.4</span></div>
                     <div class="exp-bar-bg"><div class="exp-fill" style="width: 80%;"></div></div>
                 </div>
             </div>
@@ -285,8 +273,11 @@
     <script>
         function startLoadingSequence(e) {
             if(e) e.stopPropagation();
+            const intro = document.getElementById('intro-overlay');
             const loading = document.getElementById('loading-screen');
-            document.getElementById('intro-overlay').style.display = 'none';
+            const fill = document.getElementById('loader-fill');
+            const percent = document.getElementById('loader-percent');
+            intro.style.display = 'none';
             loading.style.display = 'flex';
             let width = 0;
             let itv = setInterval(() => {
@@ -300,14 +291,15 @@
                 } else {
                     width += Math.floor(Math.random() * 20) + 5; 
                     if(width > 100) width = 100;
-                    document.getElementById('loader-fill').style.width = width + '%';
-                    document.getElementById('loader-percent').innerText = width + '%';
+                    fill.style.width = width + '%';
+                    percent.innerText = width + '%';
                 }
             }, 60);
         }
 
         function typeWriterEffect() {
             const nameTarget = document.getElementById('typing-text');
+            const sloganTarget = document.getElementById('profile-box');
             const nameText = "LEE JAE YOUNG";
             let i = 0;
             function type() {
@@ -316,7 +308,7 @@
                     i++;
                     setTimeout(type, 100);
                 } else {
-                    document.getElementById('profile-box').style.opacity = '1';
+                    sloganTarget.style.opacity = '1';
                     setTimeout(() => {
                         document.querySelectorAll('.reveal-section').forEach((sec, idx) => {
                             setTimeout(() => sec.classList.add('active'), idx * 300);
@@ -329,33 +321,11 @@
         }
 
         const projects = [
-            { 
-                title: "RHYTHM ELEVEN", tag: "SOLO QUEST", 
-                role: "Lead Game Designer", tools: "GameMaker, AI Tools", goal: "전략 축구와 리듬 게임의 융합을 통한 룰 학습 시스템 검증",
-                desc: "축구의 전략성과 리듬 입력을 결합하여 복잡한 오프사이드 등의 축구 룰을 직관적으로 학습할 수 있도록 설계된 게임 기획입니다.", 
-                achievements: "<li>리듬 입력을 활용한 축구 전술 성공/실패 로직 설계</li><li>데이터 기반 동적 난이도 밸런싱 구현</li>", img: "P1.png",
-                assets: [
-                    { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/F5uLaCbsxe8?enablejsapi=1" },
-                    { type: "pdf", title: "컨셉 기획서", url: "P1_2.pdf" },
-                    { type: "pdf", title: "화면 설계도", url: "P1_3.pdf" },
-                    { type: "pdf", title: "포스트 모템", url: "P1_4.pdf" }
-                ]
-            },
-            { 
-                title: "KOKODUGI (코코두기)", tag: "PARTY QUEST", 
-                role: "System Designer / Tools Planner", tools: "Unity, Excel VBA, Notion", goal: "방대한 게임 데이터의 효율적 관리 및 개발 자동화 환경 구축",
-                desc: "기획 데이터 관리의 비효율을 해결하기 위해 VBA 기반 자동화 도구를 제작했습니다. 단순 구현을 넘어 휴먼 에러 방지에 집중했습니다.", 
-                achievements: "<li>VBA 데이터 매니저 자동화 설계</li><li>학습 곡선 최적화를 위한 밸런스 설계</li>", img: "P2.png", 
-                assets: [
-                    { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM?enablejsapi=1" },
-                    { type: "pdf", title: "프로젝트 보고서", url: "P2_1.pdf" },
-                    { type: "excel-combined", title: "데이터 입력기", videoUrl: "https://www.youtube.com/embed/ZYoy6ipJgSg?enablejsapi=1", downloadUrl: "KOKO_Data_Manager.xlsm" },
-                    { type: "link", title: "상세 기획서", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2" }
-                ] 
-            },
-            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", role: "Balance Analyst", tools: "Excel, Python", goal: "라이브 지표 분석을 통한 수비 메타 정상화", desc: "라이브 지표 분석을 통해 전술 고착화 문제를 정의하고 개선안을 도출했습니다.", achievements: "<li>로빙 스루 패스 지표 분석</li>", img: "P3.png", assets: [{ type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf", isNarrow: true }] },
-            { title: "감독의 전술 노트", tag: "SYSTEM DESIGN", role: "Content Planner", tools: "PPT, Figma", goal: "성장 코어 루프 설계", desc: "시즌 패스 기반의 BM 모델링과 성장 루프를 설계했습니다.", achievements: "<li>BM 모델링 및 재화 흐름 설계</li>", img: "P4.png", assets: [{ type: "pdf", title: "신규 제안서", url: "P4_1_신규 시스템 제안서.pdf" }] },
-            { title: "공공 야간약국 선정", tag: "DATA ANALYSIS", role: "Data Researcher", tools: "QGIS", goal: "의료 사각지대 해소 방안 제시", desc: "정량적 입지 분석 모델을 통해 최적의 야간약국 위치를 선정했습니다.", achievements: "<li>복합 가중치 분석 모델 설계</li>", img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] }
+            { title: "RHYTHM ELEVEN", tag: "SOLO QUEST", role: "Lead Designer", tools: "GameMaker", goal: "전략 축구와 리듬 학습 융합 시스템 검증", desc: "축구 전략과 리듬 액션을 융합하여 게임 규칙을 학습하게 하는 독창적 기획입니다.", achievements: "<li>동적 난이도 밸런싱 설계</li>", img: "P1.png", assets: [{ type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/F5uLaCbsxe8?enablejsapi=1" }, { type: "pdf", title: "컨셉 기획서", url: "P1_2.pdf" }, { type: "pdf", title: "화면 설계도", url: "P1_3.pdf" }, { type: "pdf", title: "포스트 모템", url: "P1_4.pdf" }] },
+            { title: "KOKODUGI (코코두기)", tag: "PARTY QUEST", role: "System Designer", tools: "Excel VBA", goal: "방대한 데이터 관리 자동화 및 휴먼 에러 방지", desc: "데이터 관리 비효율을 인지하고 VBA를 통해 기획 생산성을 30% 향상시킨 프로젝트입니다.", achievements: "<li>데이터 자동화 도구 기획 및 제작</li>", img: "P2.png", assets: [{ type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM?enablejsapi=1" }, { type: "pdf", title: "보고서", url: "P2_1.pdf" }, { type: "excel-combined", title: "데이터 입력기", videoUrl: "https://www.youtube.com/embed/ZYoy6ipJgSg?enablejsapi=1", downloadUrl: "KOKO_Data_Manager.xlsm" }, { type: "link", title: "상세 기획서", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2" }] },
+            { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", role: "Balance Analyst", tools: "Excel, Python", goal: "라이브 지표 분석 기반 개선안 도출", desc: "라이브 지표를 통해 메타 불균형을 파악하고 정량적 수치 기반의 패치안을 수립했습니다.", achievements: "<li>전술 고착화 지표 분석</li>", img: "P3.png", assets: [{ type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf", isNarrow: true }] },
+            { title: "감독의 전술 노트", tag: "SYSTEM DESIGN", role: "Content Planner", tools: "Figma", goal: "성장 순환 구조 설계", desc: "시즌 패스 BM과 성장 코어 루프를 정밀하게 모델링했습니다.", achievements: "<li>시즌 패스 BM 기획</li>", img: "P4.png", assets: [{ type: "pdf", title: "신규 제안서", url: "P4_1_신규 시스템 제안서.pdf" }] },
+            { title: "공공 야간약국 선정", tag: "DATA ANALYSIS", role: "Data Researcher", tools: "QGIS", goal: "정량적 입지 분석 모델링", desc: "데이터 가중치 분석 모델을 설계하여 의료 사각지대 문제를 해결하는 최적 입지를 선정했습니다.", achievements: "<li>가중치 분석 모델 설계</li>", img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] }
         ];
 
         function openModal(i, e) {
@@ -372,11 +342,10 @@
                 <div class="meta-item"><span class="meta-label">TOOLS</span><span class="meta-value">${p.tools}</span></div>
                 <div class="meta-item"><span class="meta-label">GOAL</span><span class="meta-value">${p.goal}</span></div>
             `;
-
             let viewersHtml = p.assets.map((as, idx) => {
                 const isActive = idx === 0 ? 'active' : '';
                 if(as.type === 'video') return `<div class="video-container ${isActive}" id="view-${idx}"><iframe src="${as.url}" allowfullscreen></iframe></div>`;
-                if(as.type === 'link') return `<div class="excel-combined-container ${isActive}" id="view-${idx}"><div class="excel-download-card"><p>상세 기획 명세서를 외부 노션 링크에서 확인하세요.</p><a href="${as.url}" target="_blank" class="btn-pixel">노션 열기</a></div></div>`;
+                if(as.type === 'link') return `<div class="excel-combined-container ${isActive}" id="view-${idx}"><div class="excel-download-card"><p>상세 기획 문서를 외부 노션 링크에서 확인하세요.</p><a href="${as.url}" target="_blank" class="btn-pixel">노션 열기</a></div></div>`;
                 if(as.type === 'excel-combined') {
                     return `<div class="excel-combined-container ${isActive}" id="view-${idx}">
                                 <div class="combined-video-frame"><iframe src="${as.videoUrl}" allowfullscreen></iframe></div>
@@ -389,7 +358,6 @@
             document.getElementById('viewerContainer').innerHTML = viewersHtml;
             modal.style.display = 'flex';
             document.body.style.overflow = 'hidden';
-            document.getElementById('modalBodyScroll').scrollTop = 0;
         }
 
         function switchTab(btn, idx, e) {
