--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="reveal-section">
         <h2 class="section-title">MISSION STAGES</h2>
         <div class="project-container">
-            <div class="project-card" onclick="openModal(0, event)"><div class="card-img-box"><div class="tag">SOLO QUEST</div><img src="P1.png"></div><div class="card-info-box"><h3>Solo Quest: 자체 기획 및 개발</h3></div></div>
+            <div class="project-card" onclick="openModal(0, event)"><div class="card-img-box"><div class="tag">SOLO QUEST</div><img src="P1.png"></div><div class="card-info-box"><h3>자체 기획 및 개발</h3></div></div>
             <div class="project-card" onclick="openModal(1, event)"><div class="card-img-box"><div class="tag">PARTY QUEST</div><img src="P2.png"></div><div class="card-info-box"><h3>다인 협업 프로젝트</h3></div></div>
             <div class="project-card" onclick="openModal(2, event)"><div class="card-img-box"><div class="tag">BALANCE QUEST</div><img src="P3.png"></div><div class="card-info-box"><h3>라이브 서비스 개선</h3></div></div>
             <div class="project-card" onclick="openModal(3, event)"><div class="card-img-box"><div class="tag">SYSTEM QUEST</div><img src="P4.png"></div><div class="card-info-box"><h3>신규 시스템 설계</h3></div></div>
