--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         .hero { position: relative; width: 100%; height: 320px; display: flex; align-items: center; justify-content: center; overflow: hidden; border-bottom: 3px solid var(--accent); }
         .hero-bg-marquee { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; pointer-events: none; opacity: 0.4; }
         .marquee-track { display: flex; width: max-content; animation: scroll-left 50s linear infinite; filter: blur(2px) brightness(0.6); }
-        /* P6 이미지 추가됨 */
         .marquee-item { width: 500px; height: 320px; flex-shrink: 0; }
         .marquee-item img { width: 100%; height: 100%; object-fit: cover; }
         @keyframes scroll-left { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
@@ -213,7 +212,7 @@
                 <div class="marquee-item"><img src="P3.png"></div>
                 <div class="marquee-item"><img src="P4.png"></div>
                 <div class="marquee-item"><img src="P5.png"></div>
-                <div class="marquee-item"><img src="P6.png"></div>
+                <div class="marquee-item"><img src="P6.PNG"></div>
                 <div class="marquee-item"><img src="P1.png"></div>
             </div>
         </div>
@@ -257,8 +256,8 @@
             <div class="project-card" onclick="openModal(1, event)"><div class="card-img-box"><div class="tag">PARTY QUEST</div><img src="P2.png"></div><div class="card-info-box"><h3>Party Quest: 다인 협업 프로젝트</h3></div></div>
             <div class="project-card" onclick="openModal(2, event)"><div class="card-img-box"><div class="tag">BALANCE QUEST</div><img src="P3.png"></div><div class="card-info-box"><h3>Balance Quest: 라이브 서비스 개선</h3></div></div>
             <div class="project-card" onclick="openModal(3, event)"><div class="card-img-box"><div class="tag">SYSTEM QUEST</div><img src="P4.png"></div><div class="card-info-box"><h3>System Quest: 신규 시스템 설계</h3></div></div>
-            <div class="project-card" onclick="openModal(4, event)"><div class="card-img-box"><div class="tag">DATA QUEST</div><img src="P5.png"></div><div class="card-info-box"><h3>Data Quest: 데이터 기반 분석</h3></div></div>
-            <div class="project-card" onclick="openModal(5, event)"><div class="card-img-box"><div class="tag">SIMULATION QUEST</div><img src="P6.png"></div><div class="card-info-box"><h3>Simulation Quest: 밸런스 시뮬레이터</h3></div></div>
+            <div class="project-card" onclick="openModal(4, event)"><div class="card-img-box"><div class="tag">SIMULATION QUEST</div><img src="P6.PNG"></div><div class="card-info-box"><h3>Simulation Quest: 밸런스 시뮬레이터</h3></div></div>
+            <div class="project-card" onclick="openModal(5, event)"><div class="card-img-box"><div class="tag">DATA QUEST</div><img src="P5.png"></div><div class="card-info-box"><h3>Data Quest: 데이터 기반 분석</h3></div></div>
         </div>
     </div>
 
@@ -336,20 +335,21 @@
             { title: "Party Quest: 다인 협업 프로젝트", tag: "PARTY QUEST", tools: "Unity, Excel, PowerPoint, Notion", desc: "사용자 시선의 학습 곡선을 최적화하고, 방대한 게임 데이터를 효율적으로 관리하기 위한 VBA 자동화 시스템 구축 프로젝트입니다.", achievements: "<li>기획 생산성 30% 이상 향상을 위한 Excel VBA 기반 데이터 자동화 도구 기획 및 제작</li><li>15종 이상의 방대한 기획 문서 통합 관리 및 실시간 협업 아카이빙 프로세스 주도</li><li>실제 유저 플레이 데이터 분석을 통한 스테이지별 난이도 밸런스 및 학습 곡선 설계</li>", img: "P2.png", assets: [ { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM?enablejsapi=1" }, { type: "pdf", title: "프로젝트 보고서", url: "P2_1.pdf" }, { type: "excel-combined", title: "데이터 입력기", videoUrl: "https://www.youtube.com/embed/ZYoy6ipJgSg?enablejsapi=1", downloadUrl: "KOKO_Data_Manager.xlsm" }, { type: "link", title: "상세 기획서", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2" } ] },
             { title: "Balance Quest: 라이브 서비스 개선", tag: "BALANCE QUEST", tools: "내부 개발툴, PowerPoint, Word", desc: "라이브 지표 분석을 통해 게임 메타 불균형 문제를 정의하고, 정량적 수치 기반의 개선 패치안을 수립한 실무 프로젝트입니다.", achievements: "<li>2,000여 건 이상의 유저 피드백 및 지표 모니터링을 통한 텐백 전술 고착화 원인 규명</li><li>수비 AI 개선에 따른 공격 루트 영향력을 데이터로 증명하여 공격적 메타 전환 로직 설계</li><li>패치 후 예상 변화 시나리오 작성을 통한 밸런스 안정성 및 유저 만족도 변화 예측</li>", img: "P3.png", assets: [{ type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf", isNarrow: true }] },
             { title: "System Quest: 신규 시스템 설계", tag: "SYSTEM QUEST", tools: "PowerPoint", desc: "수집-조합-시너지-성장으로 이어지는 게임의 유기적 선순환 구조를 설계하여 유저의 전술적 재미를 극대화한 시스템 제안서입니다.", achievements: "<li>수집형 시즌 패스 모델링과 유저 잔존율 향상을 위한 엔드 게임 성장 루프 설계</li><li>시너지 및 보상 체계의 정밀 밸런싱을 통한 유저의 지속적인 동기 부여 전략 수립</li><li>시스템 간 상호작용 분석을 통한 신규 콘텐츠 도입의 안정성 및 BM 기대 효과 산출</li>", img: "P4.png", assets: [{ type: "pdf", title: "신규 제안서", url: "P4_1_신규 시스템 제안서.pdf" }] },
-            { title: "Data Quest: 데이터 기반 분석", tag: "DATA QUEST", tools: "Python, QGIS, PowerPoint", desc: "의료 접근성 데이터를 정량 분석하여 사각지대 해소를 위한 최적의 입지를 선정하고 논리적 홍보 전략을 제시한 분석 프로젝트입니다.", achievements: "<li>Python 및 QGIS를 활용한 의료 사각지대 정량적 데이터 가공 및 가시화 프로세스 구축</li><li>인구 밀도, 응급실 거리 등 복합 가중치 분석 모델 설계를 통한 최적 입지 우선순위 산출</li><li>데이터 분석 결과를 바탕으로 지역 밀착형 타겟 유저 선별 및 맞춤형 홍보 방안 도출</li>", img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] },
-            // --- [신규 프로젝트 6번 추가] ---
+            // [수정] 5번째로 이동 및 이미지 확장자 PNG로 변경
             {
                 title: "Simulation Quest: 밸런스 시뮬레이터",
                 tag: "SIMULATION QUEST",
                 tools: "Excel (Advanced Formulas)",
                 desc: "RPG 전투의 불확실성을 통계적 모델(정규분포)로 시뮬레이션하여, 주관적인 '감'이 아닌 데이터에 기반한 객관적인 밸런스 검증을 수행하는 엑셀 도구입니다.",
                 achievements: "<li>정규분포 및 표준편차를 활용한 확률 기반 데미지(크리티컬/회피) 산출 로직 구현</li><li>플레이어 vs 몬스터 N회 반복 시뮬레이션을 통한 승률 및 평균 전투 턴 수 시각화</li><li>수치 변경 시 결과가 즉시 연동되는 확장성 높은 구조 설계로 반복 검증 효율 극대화</li>",
-                img: "P6.png",
+                img: "P6.PNG", 
                 assets: [
                     { type: "video", title: "시뮬레이터 시연 영상", url: "https://www.youtube.com/embed/1uGaO8PXr3k?enablejsapi=1" },
                     { type: "pdf", title: "기획서 및 설계 내용", url: "P6_1.pdf" }
                 ]
-            }
+            },
+            // [수정] 6번째로 이동
+            { title: "Data Quest: 데이터 기반 분석", tag: "DATA QUEST", tools: "Python, QGIS, PowerPoint", desc: "의료 접근성 데이터를 정량 분석하여 사각지대 해소를 위한 최적의 입지를 선정하고 논리적 홍보 전략을 제시한 분석 프로젝트입니다.", achievements: "<li>Python 및 QGIS를 활용한 의료 사각지대 정량적 데이터 가공 및 가시화 프로세스 구축</li><li>인구 밀도, 응급실 거리 등 복합 가중치 분석 모델 설계를 통한 최적 입지 우선순위 산출</li><li>데이터 분석 결과를 바탕으로 지역 밀착형 타겟 유저 선별 및 맞춤형 홍보 방안 도출</li>", img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] }
         ];
 
         function openModal(i, e) {
