--- a/index.html
+++ b/index.html
@@ -44,19 +44,11 @@
         .marquee-item img { width: 100%; height: 100%; object-fit: cover; }
         @keyframes scroll-left { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
         
-        .hero-content { 
-            position: relative; z-index: 2; text-align: center; max-width: 800px; 
-            padding: 40px 0; display: flex; flex-direction: column; align-items: center; justify-content: center;
-        }
+        .hero-content { position: relative; z-index: 2; text-align: center; max-width: 800px; padding: 40px 0; display: flex; flex-direction: column; align-items: center; justify-content: center; }
         .hero-content h1 { font-size: 2.5rem; color: var(--accent); margin: 0; text-shadow: 3px 3px 0 #000; letter-spacing: 2px; }
         .cursor-blink { display: inline-block; width: 15px; animation: blink 0.8s step-end infinite; color: var(--accent); }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
-        
-        .main-slogan-text { 
-            margin-top: 50px; padding: 10px 25px; background: rgba(0, 0, 0, 0.7); 
-            border: 1px solid var(--accent); display: inline-block; 
-            font-size: 1.1rem; color: #fff; opacity: 0; transition: 0.8s; 
-        }
+        .main-slogan-text { margin-top: 50px; padding: 10px 25px; background: rgba(0, 0, 0, 0.7); border: 1px solid var(--accent); display: inline-block; font-size: 1.1rem; color: #fff; opacity: 0; transition: 0.8s; }
 
         .reveal-section { opacity: 0; transform: translateY(30px); transition: opacity 1.2s ease-out, transform 1.2s ease-out; }
         .reveal-section.active { opacity: 1; transform: translateY(0); }
@@ -89,7 +81,7 @@
         .card-info-box { padding: 20px; text-align: left; }
         .card-info-box h3 { font-size: 0.95rem; margin: 0; color: #fff; letter-spacing: 1px; }
 
-        /* --- 프로젝트 모달 & 성과 강조 --- */
+        /* --- 프로젝트 모달 --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 10005; justify-content: center; align-items: center; backdrop-filter: blur(15px); cursor: pointer; }
         .modal-content { background: var(--bg); border: 2px solid var(--accent); width: 98%; max-width: 1400px; height: 95vh; overflow: hidden; position: relative; display: flex; flex-direction: column; cursor: default; }
         .project-header-top { width: 100%; height: 130px; position: relative; overflow: hidden; flex-shrink: 0; border-bottom: 2px solid var(--accent); display: flex; align-items: center; justify-content: space-between; padding: 0 40px; box-sizing: border-box; }
@@ -101,7 +93,7 @@
         .close-system-btn:hover { background: var(--accent); color: #000; box-shadow: 0 0 20px var(--accent); }
 
         .modal-body-scroll { flex-grow: 1; overflow-y: auto; }
-        /* [수정] 하단 여백 제거 (스크롤 마감) */
+        /* [수정 1] 하단 여백 완전 제거 */
         .modal-inner-content { padding: 40px 60px 0; } 
 
         .tools-equipped-bar { background: rgba(151, 193, 231, 0.1); padding: 15px 25px; border: 1px solid var(--accent-dark); margin-bottom: 30px; display: flex; align-items: center; gap: 20px; }
@@ -117,7 +109,8 @@
         .asset-btn { padding: 10px 25px; background: rgba(22, 27, 34, 1); border: 2px solid var(--border); color: var(--text-sub); cursor: pointer; font-size: 0.9rem; font-weight: bold; }
         .asset-btn.active { background: var(--accent); color: #0d1117; border-color: #fff; box-shadow: 0 0 15px var(--accent); }
 
-        .viewer-container { width: 100%; background: #0a0e14; padding: 40px 0; border-top: 2px solid var(--accent-dark); text-align: center; }
+        /* [수정 1] 하단 여백 완전 제거 */
+        .viewer-container { width: 100%; background: #0a0e14; padding: 40px 0 0; border-top: 2px solid var(--accent-dark); text-align: center; }
         .pdf-viewer { width: 85%; height: 850px; display: none; margin: 0 auto; border: 1px solid var(--border); }
         .pdf-viewer.narrow { width: 35% !important; }
         .pdf-viewer.active { display: block; }
@@ -125,19 +118,16 @@
         .video-container.active { display: block; }
         .video-container iframe { width: 100%; height: 100%; border: none; }
 
-        /* [수정] 엑셀/링크 카드 세련된 디자인 */
-        .excel-combined-container { display: none; flex-direction: column; align-items: center; width: 85%; margin: 0 auto; gap: 30px; }
+        .excel-combined-container { display: none; flex-direction: column; align-items: center; width: 85%; margin: 0 auto; padding-bottom: 60px; gap: 30px; }
         .excel-combined-container.active { display: flex !important; }
+        /* [수정 2] 비디오 프레임 너비 고정 복구 */
         .combined-video-frame { width: 100%; aspect-ratio: 16/9; border: 3px solid var(--accent); margin-bottom: 10px; }
-        .data-access-card { 
-            width: 100%; padding: 30px; background: #000; border: 2px solid var(--accent); 
-            text-align: center; position: relative; overflow: hidden;
-            box-shadow: inset 0 0 15px var(--accent-dark);
-        }
+        .combined-video-frame iframe { width: 100%; height: 100%; border: none; }
+        .data-access-card { width: 100%; padding: 30px; background: #000; border: 2px solid var(--accent); text-align: center; position: relative; overflow: hidden; box-shadow: inset 0 0 15px var(--accent-dark); }
         .data-access-card::before { content: "SYSTEM LINK ESTABLISHED"; position: absolute; top: 5px; left: 10px; font-family: 'Press Start 2P'; font-size: 0.5rem; color: var(--accent); opacity: 0.6; }
         .data-access-card p { margin-bottom: 20px; font-weight: bold; color: var(--accent); }
 
-        @media (max-width: 950px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } .pdf-viewer, .video-container, .excel-combined-container { width: 95% !important; } }
+        @media (max-width: 950px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } .pdf-viewer, .video-container, .combined-video-frame, .data-access-card { width: 95% !important; } }
     </style>
 </head>
 <body>
@@ -249,37 +239,37 @@
             { 
                 title: "자체 기획 및 개발", tag: "SOLO QUEST", tools: "GameMaker, PowerPoint, Figma", 
                 desc: "축구 전략과 리듬 액션을 결합한 독창적 하이브리드 게임 기획입니다.", 
-                achievements: "<li><b>동적 난이도 조절 시스템 설계:</b> 선수 행동과 판정이 실시간 난이도에 직결되는 로직 구축</li><li><b>유연한 연출 구조 확보:</b> 시각 효과 및 판정 연출을 코드로 직접 구현하여 개발 효율성 강화</li><li><b>룰 학습형 재미 설계:</b> 복잡한 축구 전술 규칙을 리듬 게임의 박자 요소로 치환한 학습 구조 설계</li>", 
+                achievements: "<li><b>동적 난이도 로직 설계:</b> 선수 행동 데이터와 리듬 판정을 연동한 실시간 난이도 조절 시스템 구축</li><li><b>연출 효율성 확보:</b> 시각 효과를 코드로 직접 구현하여 유연한 수정 및 리소스 최적화 달성</li><li><b>룰 체득형 UX 기획:</b> 복잡한 축구 규칙을 리듬 패턴으로 변환하여 유저의 직관적 학습 유도</li>", 
                 img: "P1.png", assets: [{ type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/F5uLaCbsxe8" }, { type: "pdf", title: "컨셉 기획서", url: "P1_2.pdf" }, { type: "pdf", title: "화면 설계도", url: "P1_3.pdf" }, { type: "pdf", title: "포스트 모템", url: "P1_4.pdf" }] 
             },
             { 
                 title: "다인 협업 프로젝트", tag: "PARTY QUEST", tools: "Unity, Excel, PowerPoint, Notion", 
-                desc: "기획 생산성 향상과 사용자 중심의 학습 곡선을 설계한 기업 연계 프로젝트입니다.", 
-                achievements: "<li><b>데이터 자동화 시스템 구축:</b> Excel VBA 기반 도구 기획 및 제작으로 기획 생산성 30% 향상</li><li><b>통합 문서 아카이빙 주도:</b> 15종 이상의 방대한 기획 문서를 체계적으로 관리하는 협업 프로세스 수립</li><li><b>사용자 중심 밸런스 설계:</b> 실제 플레이 데이터 분석을 통한 최적의 스테이지 학습 곡선 설계</li>", 
+                desc: "기획 생산성 향상과 데이터 기반 밸런스 검증을 수행한 기업 연계 프로젝트입니다.", 
+                achievements: "<li><b>자동화 도구 구축:</b> Excel VBA 데이터 매니저 자체 제작으로 기획 데이터 관리 효율 30% 개선</li><li><b>아카이빙 프로세스 주도:</b> 15종 이상의 방대한 기획 문서 통합 관리로 팀 내 정보 불일치 제로화</li><li><b>지표 중심 밸런싱:</b> 실제 유저 플레이 데이터를 정밀 분석하여 스테이지별 최적 학습 곡선 설계</li>", 
                 img: "P2.png", assets: [ { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM" }, { type: "pdf", title: "프로젝트 보고서", url: "P2_1.pdf" }, { type: "excel-combined", title: "데이터 입력기", videoUrl: "https://www.youtube.com/embed/ZYoy6ipJgSg", downloadUrl: "KOKO_Data_Manager.xlsm" }, { type: "link", title: "상세 기획서", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2" } ] 
             },
             { 
                 title: "라이브 서비스 개선", tag: "BALANCE QUEST", tools: "내부 개발툴, PowerPoint, Word", 
-                desc: "라이브 지표 분석을 통해 게임 메타 불균형을 정의하고 개선안을 수립한 실무 프로젝트입니다.", 
-                achievements: "<li><b>불균형 원인 규명:</b> 2,000건 이상의 유저 피드백 및 지표 분석으로 전술 고착화 원인 데이터 증명</li><li><b>공격적 메타 전환 설계:</b> 수비 AI 과효율 문제를 데이터로 입증하고 공격 루트 다양화 로직 제안</li><li><b>패치 안정성 예측:</b> 패치 후 예상 변화 시나리오 작성을 통해 유저 만족도 및 메타 변화 선제 예측</li>", 
+                desc: "라이브 지표 분석을 통해 게임 메타 불균형을 해결한 데이터 기획 프로젝트입니다.", 
+                achievements: "<li><b>데이터 기반 문제 분석:</b> 2,000여 건의 유저 피드백 및 인게임 지표를 분석해 전술 고착화 원인 규명</li><li><b>로직 개선안 제안:</b> 수비 AI 과효율 문제를 수치로 증명하고 메타 정상화를 위한 공격 루트 다양화 제안</li><li><b>패치 영향 예측:</b> 수치 조정 후 예상되는 유저 반응 및 게임 메타 변화를 선제적으로 시뮬레이션</li>", 
                 img: "P3.png", assets: [{ type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf", isNarrow: true }] 
             },
             { 
-                title: "신규 시스템 설계", tag: "SYSTEM QUEST", tools: "PowerPoint", 
-                desc: "유저의 전술적 재미를 성장의 재미로 전환하는 신규 코어 루프 제안서입니다.", 
-                achievements: "<li><b>선순환 구조 설계:</b> 수집-조합-성장-시너지가 유기적으로 맞물리는 게임 선순환 로직 기획</li><li><b>전략적 BM 모델링:</b> 시즌 패스와 확률형 아이템의 결합을 통한 정교한 매출 및 유지 모델 구축</li><li><b>유저 유지 전략 수립:</b> 엔드 게임 콘텐츠 확장을 통해 최고 레벨 도달 유저의 잔존 가치 극대화</li>", 
+                title: "신규 시스템 설계", tag: "SYSTEM QUEST", tools: "PowerPoint, Figma", 
+                desc: "유저의 전술적 니즈를 성장의 재미로 연결한 시스템 기획 제안서입니다.", 
+                achievements: "<li><b>코어 루프 기획:</b> 수집-조합-성장-시너지가 유기적으로 결합된 시스템 선순환 구조 설계</li><li><b>전략적 BM 모델링:</b> 시즌 패스와 확률형 아이템의 비중을 조절하여 수익성과 유저 만족도 균형 확보</li><li><b>유저 유지 전략 수립:</b> 상위 유저를 위한 엔드 게임 콘텐츠 확장을 제안해 장기 잔존율 상승 전략 수립</li>", 
                 img: "P4.png", assets: [{ type: "pdf", title: "신규 제안서", url: "P4_1_신규 시스템 제안서.pdf" }] 
             },
             { 
-                title: "밸런스 시뮬레이터", tag: "SIMULATION QUEST", tools: "Excel (Advanced Formulas)", 
-                desc: "통계적 모델을 통해 RPG 전투의 불확실성을 객관적으로 검증하는 엑셀 시뮬레이션 도구입니다.", 
-                achievements: "<li><b>확률 기반 대미지 로직 구현:</b> 정규분포와 표준편차를 활용한 객관적 크리티컬/회피 산출</li><li><b>전투 수치 시각화:</b> N회 반복 시뮬레이션으로 승률 및 기대 턴 수를 데이터로 수치화</li><li><b>반복 검증 효율성 극대화:</b> 수치 변경 즉시 결과가 연동되는 구조로 밸런스 검증 시간 대폭 단축</li>", 
-                img: "P6.PNG", assets: [ { type: "video", title: "시뮬레이터 시연 영상", url: "https://www.youtube.com/embed/1uGaO8PXr3k" }, { type: "pdf", title: "설계 기획서", url: "P6_1.pdf" } ] 
+                title: "밸런스 시뮬레이터", tag: "SIMULATION QUEST", tools: "Excel (VBA)", 
+                desc: "RPG 전투 데이터를 통계적 모델로 검증하는 엑셀 기반 시뮬레이션 도구입니다.", 
+                achievements: "<li><b>통계적 밸런스 검증:</b> 정규분포를 활용한 확률 기반 데미지 산출 로직으로 주관적 기획의 한계 극복</li><li><b>승률 데이터 수치화:</b> 대량의 자동 반복 시뮬레이션을 통해 기대 승률 및 전투 턴 수 객관적 시각화</li><li><b>개발 생산성 극대화:</b> 수치 변경 즉시 결과가 연동되는 자동화 구조로 밸런스 테스트 리소스 대폭 절감</li>", 
+                img: "P6.PNG", assets: [ { type: "excel-combined", title: "시뮬레이터 파일", videoUrl: "https://www.youtube.com/embed/1uGaO8PXr3k", downloadUrl: "Weapon_Balance_Simulator.xlsm" }, { type: "pdf", title: "설계 기획서", url: "P6_1.pdf" } ] 
             },
             { 
                 title: "데이터 기반 분석", tag: "DATA QUEST", tools: "Python, QGIS, PowerPoint", 
-                desc: "의료 접근성 정량 분석을 통해 최적의 약국 입지와 논리적 홍보 전략을 제시한 프로젝트입니다.", 
-                achievements: "<li><b>데이터 가공 및 시각화:</b> Python/QGIS를 활용하여 의료 사각지대 정량적 데이터 프로세스 구축</li><li><b>복합 가중치 분석 모델링:</b> 인구 밀도, 응급실 거리 등 변수를 활용한 최적 입지 우선순위 산출</li><li><b>근거 중심 전략 도출:</b> 분석 결과를 실질적인 지역 밀착형 타겟 유저 선별 및 홍보 방안으로 연결</li>", 
+                desc: "의료 접근성 정량 분석을 통해 의료 사각지대 해소 전략을 수립한 분석 프로젝트입니다.", 
+                achievements: "<li><b>정량적 입지 분석:</b> Python 및 QGIS를 활용한 복합 가중치 모델로 최적의 공공 의료 부지 우선순위 산출</li><li><b>근거 중심 전략 도출:</b> 인구 밀도 및 응급 인프라 거리를 변수화하여 객관적인 입지 선정 타당성 확보</li><li><b>타겟 홍보 방안 제안:</b> 분석된 지역적 특성을 바탕으로 홍보 효율을 극대화할 수 있는 실무 가이드라인 수립</li>", 
                 img: "P5.png", assets: [{ type: "pdf", title: "데이터 분석", url: "P5_데이터분석.pdf" }] 
             }
         ];
@@ -302,7 +292,7 @@
                 if(as.type === 'excel-combined') {
                     return `<div class="excel-combined-container ${isActive}" id="view-${idx}">
                                 <div class="combined-video-frame"><iframe src="${as.videoUrl}" allowfullscreen></iframe></div>
-                                <div class="data-access-card"><i class="fas fa-file-excel" style="font-size:2rem; margin-bottom:15px;"></i><p>자동화 로직이 포함된 실제 VBA 데이터 매니저 파일을 다운로드합니다.</p><a href="${as.downloadUrl}" download class="btn-pixel">DOWNLOAD FILE (.xlsm)</a></div>
+                                <div class="data-access-card"><i class="fas fa-file-excel" style="font-size:2rem; margin-bottom:15px;"></i><p>시뮬레이션 로직이 포함된 실제 엑셀 데이터를 확인하세요.</p><a href="${as.downloadUrl}" download class="btn-pixel">DOWNLOAD FILE (.xlsm)</a></div>
                             </div>`;
                 }
                 return `<iframe class="pdf-viewer ${as.isNarrow?'narrow':''} ${isActive}" id="view-${idx}" src="${as.url}#view=FitH&toolbar=0"></iframe>`;
