--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             { 
                 title: "라이브 서비스 개선", tag: "BALANCE QUEST", 
                 desc: "EA Korea 실무 과정에서 라이브 지표 분석을 통해 게임 메타 불균형을 해결한 프로젝트입니다.", 
-                achievements: "<li><span class='highlight-title'>2,000건 이상의 여론 및 지표 분석</span>유저 피드백과 라이브 지표를 분석하여 '수비 메타 고착화' 원인 규명</li><li><span class='highlight-title'>공격적 메타 전환 로직 설계</span>수비 AI 과효율을 데이터로 증명하고 공격 루트 다양화 로직 제안</li><li><span class='highlight-title'>패치 영향도 선제 시뮬레이션</span>수치 조정 후 예상되는 유저 만족도 및 메타 변화를 정교하게 예측</li>", 
+                achievements: "<li><span class='highlight-title'>2,000건 이상의 여론 및 지표 분석</span>유저 피드백과 라이브 지표를 분석하여 '수비 메타 고착화' 원인 규명</li><li><span class='highlight-title'>내부 툴을 활용한 로직 설계</span>수비 AI 과효율을 데이터로 증명하고 공격 루트 다양화 로직 제안</li><li><span class='highlight-title'>패치 영향도 선제 시뮬레이션</span>수치 조정 후 예상되는 유저 만족도 및 메타 변화를 정교하게 예측</li>", 
                 img: "P3.png", assets: [{ type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf", isNarrow: true }] 
             },
             { 
