--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 title: "밸런스 시뮬레이터", tag: "SIMULATION QUEST", 
                 desc: "정규분포 모델을 통해 RPG 전투 데이터의 객관성을 검증하는 시뮬레이션 도구입니다.", 
                 achievements: "<li><span class='highlight-title'>정규분포 기반 전투 로직 구현</span>통계 모델을 활용하여 크리티컬 및 회피가 적용된 기대 대미지 산출</li><li><span class='highlight-title'>대량 반복 시뮬레이션 수치화</span>전투 자동 반복 테스트를 통해 승률과 기대 턴 수를 객관적으로 도출</li><li><span class='highlight-title'>반복 검증 자동화 시스템 구축</span>수치 변경 즉시 결과가 연동되어 밸런싱 검토 시간 70% 절감</li>", 
-                img: "P6.PNG", assets: [ { type: "excel-combined", title: "시뮬레이터 파일", videoUrl: "https://www.youtube.com/embed/1uGaO8PXr3k", downloadUrl: "./Weapon_Balance_Simulator.xlsm.xlsm" }, { type: "pdf", title: "설계 기획서", url: "P6_1.pdf" } ] 
+                img: "P6.PNG", assets: [ { type: "excel-combined", title: "시뮬레이터 파일", videoUrl: "https://www.youtube.com/embed/1uGaO8PXr3k", downloadUrl: "./Weapon_Balance_Simulator.xlsm.xlsm" }, { type: "pdf", title: "설계 기획서", url: "P6_1_1.pdf" } ] 
             },
             { 
                 title: "데이터 기반 분석", tag: "DATA QUEST", 
